tests/errors/06_same_scope_name.f
      PROGRAM SAME_NAME
      INTEGER I
      END
      SUBROUTINE SAME_NAME
      INTEGER A
      END
